Bug 338086 - Selection of floating text on diagram is broken
Summary: Selection of floating text on diagram is broken
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-07 05:34 UTC by Oliver Kellogg
Modified: 2014-08-08 17:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Kellogg 2014-08-07 05:34:25 UTC
Left mouse button click on a floating text on a diagram does not select the text.
Must have been broken recently; still works on the 4.13 branch.
Comment 1 Oliver Kellogg 2014-08-08 04:12:48 UTC
Git commit 69945c9e493eadba4cd8edb2c7f15d641cc629d5 by Oliver Kellogg.
Committed on 08/08/2014 at 04:11.
Pushed by okellogg into branch 'master'.

Fix selection of floating text on diagram:

umbrello/widgets/umlwidget.{h,cpp}
umbrello/widgets/widgetbase.{h,cpp}
- Move function onWidget() from UMLWidget to WidgetBase.
- If initial dynamic_cast of `this' to UMLWidget* yields NULL then return
  NULL.

umbrello/widgets/associationwidget.{h,cpp}
- Reimplement WidgetBase function onWidget() in order to check owned
  floating texts.

umbrello/widgets/floatingtextwidget.cpp function onWidget()
- If dynamic_cast of parentItem() to WidgetBase* yields NULL then return
  WidgetBase::onWidget(p).
- Admit case wt_Association to setting of isWidgetChild to true.
- If isWidgetChild is false then return WidgetBase::onWidget(p).
- If isWidgetChild is true then finally return NULL if `p' is found to lie
  outside own bounds.

umbrello/umlscene.cpp function widgetAt()
- After iteration over m_WidgetList add iteration over m_AssociationList
  with test of AssociationWidget::onWidget() on each element.

M  +11   -1    umbrello/umlscene.cpp
M  +29   -0    umbrello/widgets/associationwidget.cpp
M  +1    -0    umbrello/widgets/associationwidget.h
M  +23   -20   umbrello/widgets/floatingtextwidget.cpp
M  +0    -28   umbrello/widgets/umlwidget.cpp
M  +0    -2    umbrello/widgets/umlwidget.h
M  +32   -0    umbrello/widgets/widgetbase.cpp
M  +3    -0    umbrello/widgets/widgetbase.h

http://commits.kde.org/umbrello/69945c9e493eadba4cd8edb2c7f15d641cc629d5