Fix selection of floating text on diagram:

umbrello/widgets/umlwidget.{h,cpp}
umbrello/widgets/widgetbase.{h,cpp}
- Move function onWidget() from UMLWidget to WidgetBase.
- If initial dynamic_cast of `this' to UMLWidget* yields NULL then return
  NULL.

umbrello/widgets/associationwidget.{h,cpp}
- Reimplement WidgetBase function onWidget() in order to check owned
  floating texts.

umbrello/widgets/floatingtextwidget.cpp function onWidget()
- If dynamic_cast of parentItem() to WidgetBase* yields NULL then return
  WidgetBase::onWidget(p).
- Admit case wt_Association to setting of isWidgetChild to true.
- If isWidgetChild is false then return WidgetBase::onWidget(p).
- If isWidgetChild is true then finally return NULL if `p' is found to lie
  outside own bounds.

umbrello/umlscene.cpp function widgetAt()
- After iteration over m_WidgetList add iteration over m_AssociationList
  with test of AssociationWidget::onWidget() on each element.

BUG:338086