umbrello/widgets/umlwidget.h
@@ -91,8 +91,6 @@ public:
 
     virtual bool activate(IDChangeLog* ChangeLog = 0);
 
-    virtual UMLWidget* onWidget(const QPointF &p);
-
     void setPenFromSettings(QPainter &p);
     void setPenFromSettings(QPainter *p);
 
